More balance food regen changes